# ============================================================
#   Made by Kieranmcm07 on GitHub
#   GitHub: https://github.com/Kieranmcm07
# ============================================================
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dateforge"
version = "1.0.0"
description = "A styled CLI for changing file and folder date modified timestamps."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "DateForge contributors" }
]
keywords = ["timestamp", "metadata", "file", "folder", "modified-time", "cli"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Filesystems",
  "Topic :: Utilities"
]
dependencies = []

[project.scripts]
timewarp = "timewarp_file.cli:main"
dateforge = "timewarp_file.cli:main"
timewarp-file = "timewarp_file.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
